got map working

--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -24,6 +24,7 @@ body {
 
 .hero-unit {
 	margin-top: 60px;
+	background: 
 }
 
 h1 .title {
@@ -33,7 +34,7 @@ h1 .title {
 
 #cost {
 	text-align: center;
-	margin: 50px 0 0;
+	margin: 40px 0 40px 0;
 	font-size: 40px;
   table {
   	margin: 0 auto;
@@ -42,5 +43,10 @@ h1 .title {
   	width: 500px;
   	td, th {padding: 20px}
   }
+}
+
+#mapInterface {
+	width: 700px;
+	height: 600px;
 }
 
