but button, map stuff

--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -43,6 +43,17 @@ h1 .title {
   }
 }
 
+
+
+// Add button
+a.addButton {
+    font-size: 50px;
+    margin: 30px;
+    margin-left: 0px auto;
+    margin-bottom: 100px;
+    display: block;
+}
+
 // TEMPLATES
 #templates {
     display: none;
