--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -104,3 +104,49 @@ a.addButton {
 	height: 600px;
 }
 
+// COMPARE
+.compare {
+  display: block;
+  .comprow {
+    display: block;
+    height: 150px;
+    width: 800px;
+    .col {
+      background: rgb(200, 220, 240);
+      padding: 15px;
+      margin: 0 20px 0 0;
+      float: left;
+      width: 222px;
+      h1 {height: 75px;}
+      p {
+        padding: 15px 0 15px 0;
+        font-size: 30px;
+      }
+    }
+  }
+  .info {
+    padding-top: 40px;
+    display: block;
+    width: 800px;
+    .entry {
+      width: 800px;
+      display: block;
+      height: 35px;
+      span {
+        float: left;
+        font-weight: bold;
+        line-height: 30px;
+        font-size: 20px;
+        width: 120px;
+      }
+      p {
+        float: left;
+        width: 680px;
+        font-size: 20px;
+        line-height: 30px;
+        border-bottom: 1px rgb(230,230,230) solid;
+      }
+    }
+  }
+}
+
