--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -233,3 +233,13 @@ a.addButton {
   }
 }
 
+// ABOUT
+.about {
+  padding-top: 35px;
+  width: 800px;
+  display: block;
+  p {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
