--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -37,6 +37,10 @@ body {
     width: 800px;
 }
 
+.main.container {
+    padding-top: 40px;
+}
+
 .hero-unit {
 	margin-top: 60px;
 	img {
@@ -130,6 +134,10 @@ h1 .title {
         top: 40px;
         .translate(-600px, 0px);
         .transition(500ms all ease);
+    }
+
+    h1 a {
+        color: #000;
     }
 
     h1.place {
