--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -38,7 +38,7 @@ body {
 }
 
 .main.container {
-    padding-top: 40px;
+    margin-top: 40px;
 }
 
 .hero-unit {
@@ -315,7 +315,7 @@ a.addButton {
 }
 
 // ABOUT
-.about {
+div.about {
   padding-top: 35px;
   width: 800px;
   display: block;
@@ -324,3 +324,9 @@ a.addButton {
     line-height: 30px;
   }
 }
+
+body.about .main.container {
+    margin-top: 60px;
+
+}
+
