--- a/designApp/css/styles.less
+++ b/designApp/css/styles.less
@@ -220,6 +220,10 @@ a.addButton {
     #list {
         margin-top: 50px;
 
+        table {
+            background-color: #D0DFF4;
+        }
+
     }
 }
 
